[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/SnakeMultiplayer.gd" type="Script" id=1]
[ext_resource path="res://assets/Sprites/Snake Sprites/snake-head2.png" type="Texture" id=2]
[ext_resource path="res://assets/Sprites/Snake Sprites/snake-head5.png" type="Texture" id=3]
[ext_resource path="res://assets/Sprites/Snake Sprites/snake-head7.png" type="Texture" id=4]
[ext_resource path="res://assets/Sprites/Snake Sprites/snake-head8.png" type="Texture" id=5]
[ext_resource path="res://assets/Sprites/Snake Sprites/snake-head3.png" type="Texture" id=6]
[ext_resource path="res://assets/Sprites/Snake Sprites/snake-head4.png" type="Texture" id=7]
[ext_resource path="res://assets/Sprites/Snake Sprites/snake-head6.png" type="Texture" id=8]
[ext_resource path="res://assets/Sprites/Snake Sprites/snake-head1.png" type="Texture" id=9]
[ext_resource path="res://scenes/TailSegmentMultiplayer.tscn" type="PackedScene" id=10]
[ext_resource path="res://scripts/multiply.tres" type="Shader" id=11]

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 11 )
shader_param/multiply_color = Color( 0, 0.682353, 1, 1 )

[sub_resource type="CircleShape2D" id=6]
radius = 5.0

[sub_resource type="CircleShape2D" id=3]
radius = 9.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[node name="Snake" type="Node2D" groups=["snake"]]
material = SubResource( 5 )
script = ExtResource( 1 )
tail = ExtResource( 10 )

[node name="Head" type="Area2D" parent="."]
use_parent_material = true

[node name="KinematicBody2D" type="KinematicBody2D" parent="Head"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head/KinematicBody2D"]
shape = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Head"]
use_parent_material = true
position = Vector2( 0, 1 )
z_index = 1
frames = SubResource( 2 )
frame = 1
playing = true

[node name="HitDelay" type="Timer" parent="Head"]
wait_time = 0.5
one_shot = true

[node name="TurnDelay" type="Timer" parent="Head"]
wait_time = 0.075
one_shot = true

[connection signal="area_entered" from="Head" to="." method="_on_Head_area_entered"]
[connection signal="timeout" from="Head/TurnDelay" to="." method="_on_TurnDelay_timeout"]
